--- a/tests/pipelines/tf-nat-gw-regression.yaml
+++ b/tests/pipelines/tf-nat-gw-regression.yaml
@@ -27,8 +27,8 @@ jobs:
 
   - task: check-nat-region-map
     params:
-      service_account_json: ((common.service_account_json))
-      project_id: {{project_id}}
+      service_account_json: ((regression-project.service_account_json))
+      project_id: ((regression-project.project_id))
       region: us-central1
       zone: us-central1-f
     on_failure:
@@ -54,8 +54,8 @@ jobs:
     params:
       git_src: git
       git_target: git
-      service_account_json: ((common.service_account_json))
-      project_id: {{project_id}}
+      service_account_json: ((regression-project.service_account_json))
+      project_id: ((regression-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-gke-zonal
@@ -86,8 +86,8 @@ jobs:
     params:
       git_src: git
       git_target: git
-      service_account_json: ((common.service_account_json))
-      project_id: {{project_id}}
+      service_account_json: ((regression-project.service_account_json))
+      project_id: ((regression-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-gke-regional
@@ -118,8 +118,8 @@ jobs:
     params:
       git_src: git
       git_target: git
-      service_account_json: ((common.service_account_json))
-      project_id: {{project_id}}
+      service_account_json: ((regression-project.service_account_json))
+      project_id: ((regression-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-gke-private
@@ -150,8 +150,8 @@ jobs:
     params:
       git_src: git
       git_target: git
-      service_account_json: ((common.service_account_json))
-      project_id: {{project_id}}
+      service_account_json: ((regression-project.service_account_json))
+      project_id: ((regression-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-gke-ha-regional
@@ -168,42 +168,42 @@ jobs:
         body: email/body-failed
     file: git/tests/tasks/example-gke-ha-nat-gateway-regional.yaml
 
-# ###
-# # run-example-ha-nat-gateway
-# ###
-# - name: run-example-ha-nat-gateway
-#   serial: true
-#   plan:
-#   - get: once-a-day
-#     trigger: true
+###
+# run-example-ha-nat-gateway
+###
+- name: run-example-ha-nat-gateway
+  serial: true
+  plan:
+  - get: once-a-day
+    trigger: true
 
-#   - get: git
-#     trigger: false
+  - get: git
+    trigger: false
 
-#   - task: test-example-ha-nat
-#     params:
-#       git_src: git
-#       git_target: git
-#       service_account_json: ((common.service_account_json))
-#       compute_ssh_key: ((common.compute_ssh_key))
-#       compute_ssh_pub: ((common.compute_ssh_pub))
-#       project_id: {{project_id}}
-#       backend_bucket: {{backend_bucket}}
-#       backend_prefix: terraform-google-nat-gateway/
-#       env_name: tf-ci-nat-ha
-#       example_dir: examples/ha-nat-gateway
-#       zone: us-east4-a
-#       TF_VAR_network_name: tf-ci-nat-ha
-#       TF_VAR_region: us-east4
-#       TF_VAR_zone1: us-east4-a
-#       TF_VAR_zone2: us-east4-b
-#       TF_VAR_zone3: us-east4-c
-#     on_failure:
-#       put: send-an-email
-#       params:
-#         subject: email/subject-failed
-#         body: email/body-failed
-#     file: git/tests/tasks/example-ha-nat-gateway.yaml
+  - task: test-example-ha-nat
+    params:
+      git_src: git
+      git_target: git
+      service_account_json: ((regression-project.service_account_json))
+      compute_ssh_key: ((common.compute_ssh_key))
+      compute_ssh_pub: ((common.compute_ssh_pub))
+      project_id: ((regression-project.project_id))
+      backend_bucket: {{backend_bucket}}
+      backend_prefix: terraform-google-nat-gateway/
+      env_name: tf-ci-nat-ha
+      example_dir: examples/ha-nat-gateway
+      zone: us-east4-a
+      TF_VAR_network_name: tf-ci-nat-ha
+      TF_VAR_region: us-east4
+      TF_VAR_zone1: us-east4-a
+      TF_VAR_zone2: us-east4-b
+      TF_VAR_zone3: us-east4-c
+    on_failure:
+      put: send-an-email
+      params:
+        subject: email/subject-failed
+        body: email/body-failed
+    file: git/tests/tasks/example-ha-nat-gateway.yaml
 
 ###
 # run-example-lb-nat-gateway
@@ -221,10 +221,10 @@ jobs:
     params:
       git_src: git
       git_target: git
-      service_account_json: ((common.service_account_json))
+      service_account_json: ((regression-project.service_account_json))
       compute_ssh_key: ((common.compute_ssh_key))
       compute_ssh_pub: ((common.compute_ssh_pub))
-      project_id: {{project_id}}
+      project_id: ((regression-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-lb
@@ -256,10 +256,10 @@ jobs:
     params:
       git_src: git
       git_target: git
-      service_account_json: ((common.service_account_json))
+      service_account_json: ((regression-project.service_account_json))
       compute_ssh_key: ((common.compute_ssh_key))
       compute_ssh_pub: ((common.compute_ssh_pub))
-      project_id: {{project_id}}
+      project_id: ((regression-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-multi-env
@@ -277,7 +277,7 @@ jobs:
         subject: email/subject-failed
         body: email/body-failed
     file: git/tests/tasks/example-multi-env.yaml
-
+    
 ###
 # run-example-module-disable
 ###
@@ -294,10 +294,10 @@ jobs:
     params:
       git_src: git
       git_target: git
-      service_account_json: ((common.service_account_json))
+      service_account_json: ((regression-project.service_account_json))
       compute_ssh_key: ((common.compute_ssh_key))
       compute_ssh_pub: ((common.compute_ssh_pub))
-      project_id: {{project_id}}
+      project_id: ((regression-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-disable
@@ -329,10 +329,10 @@ jobs:
     params:
       git_src: git
       git_target: git
-      service_account_json: ((common.service_account_json))
+      service_account_json: ((regression-project.service_account_json))
       compute_ssh_key: ((common.compute_ssh_key))
       compute_ssh_pub: ((common.compute_ssh_pub))
-      project_id: {{project_id}}
+      project_id: ((regression-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
       env_name: tf-ci-nat-squid
