--- a/tests/tasks/example-gke-ha-nat-gateway-regional.yaml
+++ b/tests/tasks/example-gke-ha-nat-gateway-regional.yaml
@@ -38,6 +38,7 @@ params:
   zone1:
   zone2:
   zone3:
+  TF_VAR_name:
 run:
   path: bash
   args:
@@ -133,10 +134,6 @@ run:
     cat > terraform.tfvars <<EOF
     network       = "${NETWORK}"
     region        = "${REGION}"
-    zone1         = "${zone1}"
-    zone2         = "${zone2}"
-    zone3         = "${zone3}"
-    name          = "tf-ci-gke-ha-"
     gke_master_ip = "${MASTER_IP}"
     gke_node_tag  = "${NODE_TAG}"
     EOF
