--- a/tests/pipelines/tf-nat-gw-pull-requests.yaml
+++ b/tests/pipelines/tf-nat-gw-pull-requests.yaml
@@ -507,10 +507,10 @@ jobs:
       project_id: ((pr-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
-      env_name: tf-ci-nat-module-disable-pr
+      env_name: tf-ci-nat-disable-pr
       example_dir: examples/module-disable
       zone: us-central1-f
-      TF_VAR_network_name: tf-ci-nat-module-disable-pr
+      TF_VAR_network_name: tf-ci-nat-disable-pr
       TF_VAR_region: us-central1
       TF_VAR_zone: us-central1-f
     on_failure:
@@ -548,10 +548,10 @@ jobs:
       project_id: ((pr-project.project_id))
       backend_bucket: {{backend_bucket}}
       backend_prefix: terraform-google-nat-gateway/
-      env_name: tf-ci-nat-squid-proxy-pr
+      env_name: tf-ci-nat-squid-pr
       example_dir: examples/squid-proxy
       zone: us-central1-f
-      TF_VAR_network_name: tf-ci-nat-squid-proxy-pr
+      TF_VAR_network_name: tf-ci-nat-squid-pr
       TF_VAR_region: us-central1
       TF_VAR_zone: us-central1-f
     on_failure:
